Created the JDK 11 installation bundle (#1)
* Added packaging for JFX 11

* Removed unused character

* Added missing set commands to Windows batch file

* Corrected quotes in Windows batch script

* Switched windows installer to create image

* Windows packager batch file now calls java directly

* Cleaned up the special windows stuff for the bundler script

* Restored the bundler script for windows

* Added creation of Inno Setup config for Windows

* Added support for file associations

* Added code signing for the Mac

* Added explicit checks on command line flags