@@ -58,3 +58,52 @@ test {
         jvmArgs "-Dheadless=true"
     }
 }
+
+if (JavaVersion.current() == JavaVersion.VERSION_11) {
+    def platform
+    if (operatingSystem.isWindows()) {
+        platform = 'win'
+    } else if (operatingSystem.isLinux()) {
+        platform = 'linux'
+    } else if (operatingSystem.isMacOsX()) {
+        platform = 'mac'
+    }
+
+    configurations {
+        javafxCompile
+    }
+
+    dependencies {
+        javafxCompile "org.openjfx:javafx-base:11:${platform}"
+        javafxCompile "org.openjfx:javafx-graphics:11:${platform}"
+        javafxCompile "org.openjfx:javafx-controls:11:${platform}"
+        javafxCompile "org.openjfx:javafx-fxml:11:${platform}"
+
+        compileOnly configurations.javafxCompile
+    }
+
+    tasks.withType(JavaCompile) {
+        options.with {
+            compilerArgs += [
+                '--module-path', configurations.javafxCompile.asPath,
+                '--add-modules', 'javafx.controls'
+            ]
+        }
+    }
+
+    [run, test].each {
+        it.jvmArgs += [
+            '--module-path', configurations.javafxCompile.asPath,
+            '--add-modules', 'javafx.controls,javafx.fxml',
+            '--add-exports', 'javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
+            '--add-exports', 'javafx.graphics/com.sun.javafx.css=ALL-UNNAMED'
+        ]
+    }
+
+    test {
+        jvmArgs += [
+            '--add-opens', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+            '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
+        ]
+    }
+}
